--- a/gb/20/1/22/n11811907.md
+++ b/gb/20/1/22/n11811907.md
@@ -1,55 +1,117 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nbrsvv347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nbrsvv347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nbrsvv347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>2020金鼠年 十二生肖五行开运法</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/1061133e3fd6e1f8f40c53b8e1602860-600x400.jpg" />
+<h6>在地理风水中，十二生肖也有各自的五行属性，可以使用五行相生相克的原理，来开创好运招财纳福。（三川提供）
+</h6>
+<hr>
+<p>在中国的传统的文化里，自古以来就有所谓的“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%81%E4%BA%8C%E7%94%9F%E8%82%96.md#1">十二生肖</a>”之说。而这个十二生肖是由计算时间的十二地支“子、丑、寅、卯、辰、巳、午、未、申、酉、戌、亥”排列而来，每个地支都代表一种动物，也就是十二生肖“鼠、牛、虎、兔、龙、蛇、马、羊、猴、鸡、狗、猪”。</p>
+<p>因此，从古至今这<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%81%E4%BA%8C%E7%94%9F%E8%82%96.md#1">十二生肖</a>就与中国人的生活息息相关，每个人一出生的当年，就会有一个属于自己的生肖动物。然而我们一生的运势、财禄、健康、感情等，多多少少都与自己的生肖有所关联。在地理风水中十二生肖也有各自的五行属性，可以使用五行相生相克的原理，来开创好运招财纳福。在以下的内容中将为大家分别介绍十二生肖五行的开运妙方。</p>
+<figure id="attachment_11811910" aria-describedby="caption-attachment-11811910" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/60517c04a5178f5d03bb24c9b47e2428.jpg"><img class="size-large wp-image-11811910" src="https://i.epochtimes.com/assets/uploads/2020/01/60517c04a5178f5d03bb24c9b47e2428-600x261.jpg" alt="" width="600" b="261" /></a><figcaption id="caption-attachment-11811910" class="wp-caption-text">五行色彩招财树。（三川提供）</figcaption></figure>
+<h2><span style="color: #ff6600;">生肖的五行颜色开运法</span></h2>
+<p>在日常生活中，想要让自己的运势变得更好，可以将自己的日常生活用品、衣物或每天携带的包包、配件、饰品……或是个人卧室的窗帘、寝具、地毯……通通改成适合自己生肖五行的颜色，不但可以焕然一新，还能够提升好运喔！</p>
+<figure id="attachment_11811915" aria-describedby="caption-attachment-11811915" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/0755f01c72b5d148ca9212c093692de6.jpg"><img class="size-large wp-image-11811915" src="https://i.epochtimes.com/assets/uploads/2020/01/0755f01c72b5d148ca9212c093692de6-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11811915" class="wp-caption-text">五行色彩寝具。（三川提供）</figcaption></figure>
+<p><span style="color: #ff6600;"><strong>①生肖猴、鸡属“金”：</strong></span></p>
+<p>◆根据五行法则“金金相生”，若想提升自己个人的运势，可以使用白色、银色、金色及古铜金色之物品。</p>
+<p>◆根据五行法则“土生金”，若想要贵人帮助，可以使用米色、黄色、褐色、卡其色、咖啡色之物品。</p>
+<p>◆根据五行法则“金生水”，若想提升家人的运势，可以使用蓝色、浅蓝色、靛蓝色、蓝绿色、宝蓝色、紫色、黑色之物品。</p>
+<p><span style="color: #ff6600;"><strong>②生肖虎、兔属“木”：</strong></span></p>
+<p>◆根据五行法则“木木相生”，若想提升自己个人的运势，可以使用绿色、浅绿色、黄绿色、墨绿色之物品。</p>
+<p>◆根据五行法则“水生木”，若想要贵人帮助，可以使用蓝色、浅蓝色、靛蓝色、蓝绿色、宝蓝色、紫色、黑色之物品。</p>
+<p>◆根据五行法则“木生火”，若想提升家人的运势，可以使用红色、朱色、橘色、桃红色、粉红色之物品。</p>
+<p><span style="color: #ff6600;"><strong>③生肖鼠、猪属“水”：</strong></span></p>
+<p>◆根据五行法则“水水相生”，若想提升自己个人的运势，可以使用蓝色、浅蓝色、靛蓝色、蓝绿色、紫色、黑色之物品。</p>
+<p>◆根据五行法则“金生水”，若想要贵人帮助，可以使用白色、金色、银色及古铜金色之物品。</p>
+<p>◆根据五行法则“水生木”，若想提升家人的运势，可以使用绿色、浅绿色、黄绿色、墨绿色之物品。</p>
+<p><span style="color: #ff6600;"><strong>④生肖蛇、马属“火”：</strong></span></p>
+<p>◆根据五行法则“火火相生”，若想提升自己个人的运势，可以使用红色、朱色、橘色、桃红色、粉红色之物品。</p>
+<p>◆根据五行法则“木生火”，若想要贵人帮助，可以使用绿色、浅绿色、黄绿色、墨绿色之物品。</p>
+<p>◆根据五行法则“火生土”，若想提升家人的运势，可以使用米色、黄色、褐色、卡其色、咖啡色之物品。</p>
+<p><span style="color: #ff6600;"><strong>⑤生肖牛、龙、羊、狗属“土”：</strong></span></p>
+<p>◆根据五行法则“土土相生”，若想提升自己个人的运势，可以使用米色、黄色、褐色、卡其色、咖啡色之物品。</p>
+<p>◆根据五行法则“火生土”，若想要贵人帮助，可以使用红色、朱色、橘色、桃红色、粉红色之物品。</p>
+<p>◆根据五行法则“土生金”，若想提升家人的运势，可以使用白色、金色、银色及古铜金色之物品。</p>
+<h2><span style="color: #ff6600;">生肖五行的开运物品</span></h2>
+<p>新的一年即将到来，很多人都会买一些喜气洋洋的应景商品，为家里增添许多过节的气氛。但也可以参考自己的生肖所对应的五行关系，购买一些属于自己的开运吉祥物品，放在家中的玄关、财位、卧房、客厅……能为自己或家人招财纳福增添好运喔！</p>
+<p>①生肖属猴、鸡的五行属“金”，根据五行法则“土生金”，适合摆放属土的吉祥物品，例如：水晶原矿、水晶球、紫晶洞、陶艺品。</p>
+<figure id="attachment_11811914" aria-describedby="caption-attachment-11811914" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/f5a6436a2dc3a0b062f66cfb1ba8f754.jpg"><img class="size-large wp-image-11811914" src="https://i.epochtimes.com/assets/uploads/2020/01/f5a6436a2dc3a0b062f66cfb1ba8f754-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11811914" class="wp-caption-text">陶艺品。（三川提供）</figcaption></figure>
+<p>②生肖属虎、兔的五行属“木”，根据五行法则“水生木”，适合摆放属水的吉祥物品，例如：流水盆（时来运转）、鱼缸、水耕植物……</p>
+<figure id="attachment_11811911" aria-describedby="caption-attachment-11811911" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/761579df7660413fb88772a9ed42784a.jpg"><img class="wp-image-11811911 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/761579df7660413fb88772a9ed42784a-450x800.jpg" alt="" width="450" b="800" /></a><figcaption id="caption-attachment-11811911" class="wp-caption-text">流水盆。（三川提供）</figcaption></figure>
+<p>③生肖属鼠、猪的五行属“水”，根据五行法则“金生水”，适合摆放属金的吉祥物品，例如：金属工艺品、金属雕像、五帝钱、金元宝、金属扑满……</p>
+<p>④生肖属蛇、马的五行属“火”，根据五行法则“木生火”，适合摆放属木的吉祥物品，例如：招财树或发财树之类的盆栽，盆栽必须有土种植，而植物以四季长青、绿意盎然的植物为主，尤其以叶大而圆的植物最好，但是切忌茎叶上不能有刺，以免口舌是非犯小人。</p>
+<figure id="attachment_11811912" aria-describedby="caption-attachment-11811912" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/77662d9d76b3ce5d9debceaa0a1b5bed.jpg"><img class="wp-image-11811912 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/77662d9d76b3ce5d9debceaa0a1b5bed-450x600.jpg" alt="" width="450" b="600" /></a><figcaption id="caption-attachment-11811912" class="wp-caption-text">绿色盆栽。（三川提供）</figcaption></figure>
+<p>⑤生肖属牛、龙、羊、狗的五行属“土”，根据五行法则“火生土”，适合摆放属火的吉祥物品，例如：红色的中国结、春联、灯笼或是盐灯……</p>
+<figure id="attachment_11811909" aria-describedby="caption-attachment-11811909" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/f89672e7a01d9ed6cc13774346d7849d.jpg"><img class="wp-image-11811909 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/f89672e7a01d9ed6cc13774346d7849d-450x600.jpg" alt="" width="450" b="600" /></a><figcaption id="caption-attachment-11811909" class="wp-caption-text">盐灯。（三川提供）</figcaption></figure>
+<h2>十二生肖的运势：墙、大门座向开运法</h2>
+<p>所谓的生肖运势墙及大门座向，就是依据生肖的五行对应的方位，也许是墙壁也许是大门口，只要摆设适当的开运物品或色彩壁贴，就能够提升个人的好运气。在新年的期间除旧布新时执行此布置摆设，也能帮助家人开运或转运喔！</p>
+<p><strong>①生肖猴、鸡属“金”，五行对应的方位是“西方”。</strong></p>
+<p>宜吸取西方之金气，属于五行法则的“金金相生”，所以在西方的墙面上尽量使用白色的壁纸或油漆，或是挂上金属饰品或金属时钟。若是大门开在西方，则可在大门口旁摆放铜雕或是挂上铜铃等，能增加贵人财运。</p>
+<p><strong>②生肖虎、兔属“木”，五行对应的方位是“东方”。</strong></p>
+<p>宜吸取东方之木气，属于五行法则的“木木相生”，所以在东方的墙面上尽量使用绿色的壁纸或油漆，或是挂上森林树木的风景画。若是大门开在东方，则可在大门口旁摆放植物盆栽、木雕作品等，能提升事业财运。</p>
+<figure id="attachment_11811919" aria-describedby="caption-attachment-11811919" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/1f7a487d6d2d9a5603d8499d4332e24b.jpg"><img class="wp-image-11811919 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/1f7a487d6d2d9a5603d8499d4332e24b-450x600.jpg" alt="" width="450" b="600" /></a><figcaption id="caption-attachment-11811919" class="wp-caption-text">美丽的年节应景盆栽。（三川提供）</figcaption></figure>
+<p><strong>③生肖鼠、猪属“水”，五行对应的方位是“北方”。</strong></p>
+<p>宜吸取北方之水汽，属于五行法则的“水水相生”，所以在北方的墙面上尽量使用淡蓝色、淡紫色的壁纸或油漆，或是挂上河流、湖泊、海洋的油画。若是大门开在北方，则可在大门口旁摆放时来运转流水盆或鱼缸，能增加财源及收入。</p>
+<p><strong>④生肖蛇、马属“火”，五行对应的方位是“南方”。</strong></p>
+<p>宜吸取南方之火气，属于五行法则的“火火相生”，所以在南方的墙面上尽量使用浅红色、粉红色、橘色的壁纸或油漆，或是装上壁灯、挂上红色中国结饰品。若是大门开在南方，则可在大门口旁贴上红色春联、新年饰品或挂红灯笼等，能拓展人脉财运。</p>
+<figure id="attachment_11811913" aria-describedby="caption-attachment-11811913" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/e3d20dc467458f32befe6a9104a6467a.jpg"><img class="size-large wp-image-11811913" src="https://i.epochtimes.com/assets/uploads/2020/01/e3d20dc467458f32befe6a9104a6467a-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11811913" class="wp-caption-text">中国结。（三川提供）</figcaption></figure>
+<p><strong>⑤生肖牛、龙、羊、狗属“土”，五行对应的方位是“东北、东南、西北、西南”。</strong></p>
+<p>宜吸取四偏方的土气，属于五行法则的“土土相生”，所以在四偏方的墙面上尽量使用米色、黄色、浅褐色的壁纸或油漆，或是摆放紫晶洞或紫晶洞、陶瓷花瓶。若是大门开在四偏方，则可在大门口旁摆放石雕作品或是雅石，能增强磁场增加财运。</p>
+<figure id="attachment_11811916" aria-describedby="caption-attachment-11811916" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/174dec66f52545b712ea1f42e8bdfd61.jpg"><img class="wp-image-11811916 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/174dec66f52545b712ea1f42e8bdfd61-450x600.jpg" alt="" width="450" b="600" /></a><figcaption id="caption-attachment-11811916" class="wp-caption-text">紫晶洞。（三川提供）</figcaption></figure>
+<figure id="attachment_11811917" aria-describedby="caption-attachment-11811917" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/63305e9738f67c3eb04bd14af5e9a4b7.jpg"><img class="wp-image-11811917 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/63305e9738f67c3eb04bd14af5e9a4b7-450x600.jpg" alt="" width="450" b="600" /></a><figcaption id="caption-attachment-11811917" class="wp-caption-text">雅石原矿。（三川提供）</figcaption></figure>
+<p>最后，希望大家在新的一年里能够把家里打扫干净，除旧布新后，房子也焕然一新，环境变好了，心情也就变好了，运势也就变好了！一间房子若是想要改运或开运，就必须执行以下4个步骤：</p>
+<p>1.除秽（打扫干净）。<br />
+2.净化（烧艾草或鼠尾草烟熏房子）。<br />
+3.布置（风水化煞开运摆设）。<br />
+4.开运（必须要行善积德）。</p>
+<p>祝福大家新年快乐、吉祥开运、万事如意。◇</p>
+<p>责任编辑：王愉悦</p>
 
-<h6></h6>
-<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/nbrsvv347/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/nbrsvv347/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/nbrsvv347/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/nbrsvv347/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/14/8/10/n4221447.md#1">嘉义儿童艺术节 设计亲子游戏</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/14/8/16/n4226571.md#1">嘉县儿童艺术节  活动琳琅满目</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/15/7/12/n4478615.md#1">嘉县儿童艺术节  邀亲子同乐</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/7/19/n8116043.md#1">2016嘉义县儿童艺术节即将活力登场</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/20/3/19/n11954599.md#1">防疫护具DIY 美和科大成立“防疫工作坊”</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/20/3/19/n11954343.md#1">抗肺炎 屏东推一日农夫采菇乐好疗愈</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/20/3/19/n11953791.md#1">家长协会理事长邵祈诚捐赠防护洁手凝胶</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/20/3/19/n11953677.md#1">嘉义荣服处接送韩战义士 入住荣家安养天年</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/20/3/19/n11953583.md#1">停课不停学 老师抵嘉（家）指导线上学习</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/20/3/19/n11953631.md#1">国立嘉义高中 大学繁星推荐入学成绩优异</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/30/n11691871.md#1">【馨香雅句】天地有大美而不言——时令之今</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/19/n11732566.md#1">【命理】2020金水流年哪些人有利？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/1/n11761484.md#1">中川日本料理：徜徉于清淡典雅的和风</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/16/n11797750.md#1">台湾2020大选结果命理观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676650.md#1">废弃校园重生 大山北月美好愿景</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/6/n13356361.md#1">汉字点亮心灯 文字画艺术家蔡渔</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/28/n13053615.md#1">【北翠说画】歌利亚和精灵玫瑰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/30/n12514007.md#1">华府台美文化讲座31日开跑 全球民众可线上听讲互动</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/28/n12508483.md#1">别样中山——寻觅最美的时光之旅</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/19/n11879112.md#1">著名音乐教授和韩国音乐生在济州的师生之缘</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098413.md#1" target="_blank">共产暴政录：唐山大地震曾被预测出来</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11236766.md#1" target="_blank">幸遇大法重获希望 华府法轮功学员感恩师父</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13617336.md#1">吴明德：拆解港府千亿财政赤字如何变盈余</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13617253.md#1">侦探的盲点</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/23/n13599774.md#1">【思想领袖】疫苗完美？您陷入“群体重塑”</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13611283.md#1">【更新2.28】俄军逼近基辅 车队长达40英里</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13611950.md#1">俄罗斯侵乌第5天 世界局势出现哪些变化？</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614671.md#1">泽连斯基欧议会演说 全场起立鼓掌 翻译都落泪</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13615002.md#1">小粉红对乌国女性发低俗言论 杜汶泽发文怒呛</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/27/n13608014.md#1">橙色食物对眼睛好 还有这些强大益处</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13612683.md#1">75岁老人白发变黑 中医师教你养发秘诀</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nbrsvv347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nbrsvv347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/22/n11811907.htm"></a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/22/n11811907.htm">2020金鼠年 十二生肖五行开运法</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nbrsvv347/djy/blob/master/gb/20/1/22/n11811907.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nbrsvv347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nbrsvv347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/1/22/n11811907.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
